<?xml version="1.0"?>
<package format="2">
  <name>robocup_home_education_los_ultramarinos</name>
  <version>0.0.0</version>
  <description>The robocup_home_education_los_ultramarinos package</description>

  <maintainer email="lroa@todo.todo">lroa</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dialogflow_ros_msgs</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sound_play</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dialogflow_ros_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>

  </export>
</package>
